correción en mail de factura

--- a/templates/emails/factura.html
+++ b/templates/emails/factura.html
@@ -96,7 +96,7 @@
                                                                                         Solicitud</th>
                                                                                     <th
                                                                                         style="font-size: small; font-weight: lighter; color: #052434;">
-                                                                                        {{solicitud_descripcion}}</th>
+                                                                                        N° {{solicitud_descripcion}}</th>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <th
